# local-repo-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/local_repo_manager/: cli.py  config.py  envrc.py  main.py  project.py  update.py  util.py
